
AUTOMAKE_OPTIONS = subdir-objects

include ../flagsandlibs
include ../sources

kkeditcli_SOURCES = $(COMMONSRC)

scriptfilesdir = $(pkgdatadir)/scripts
scriptfiles_SCRIPTS = ../resources/scripts/*

helpfilesdir = $(pkgdatadir)/help
helpfiles_DATA = ../resources/help/*

man1_MANS = ../resources/man/kkeditcli.1

bin_PROGRAMS = kkeditcli

